fix: added class wrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,10 @@ header a{
     padding: 5px;
 }
 
+.wrap{
+    flex-wrap: wrap;
+}
+
 .container{
     display: flex;
     margin: 40px;
